Fixed attribute spacing

--- a/styles/content.css
+++ b/styles/content.css
@@ -1,5 +1,5 @@
 body{
-    font-size: 12pt;
+    font-size: 10pt;
     color: rgb(218, 218, 218);
     background-color: rgb(27, 29, 36);
     font-family: 'Consolas';
@@ -14,7 +14,6 @@ body{
 }
 
 #xml-attribute-wrapper{
-    margin-left: 20px;
     display: inline-block;
 }
 
